plparse: Don't consider MJPEG streams as JPEG images

Similarly to PLS/HLS playlist files in commit 32b2a71, we need to
whitelist mjpeg files and pass them on as a media file, rather than
ignoring them and removing them from the list of files to play.

This requires a version of shared-mime-info with an MJPEG mime-type
definition.

https://bugzilla.gnome.org/show_bug.cgi?id=792325