plparse/totem-pl-parser.c
@@ -1742,6 +1742,7 @@ totem_pl_parser_ignore_from_mimetype (TotemPlParser *parser, const char *mimetyp
 		 * in shared-mime-info */
 		if (strcmp (mimetype, "application/vnd.apple.mpegurl") != 0 &&
 		    strcmp (mimetype, "audio/x-mpegurl") != 0 &&
+		    strcmp (mimetype, "video/x-mjpeg") != 0 &&
 		    g_content_type_is_a (mimetype, ignore_types[i].mimetype) != FALSE) {
 			if (parser->priv->debug)
 				g_print ("Ignoring %s because it's a %s\n", mimetype, ignore_types[i].mimetype);
